// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<svg
  className="LinkDetail"
  style={
    Object {
      "height": 10,
      "left": 10,
      "top": 30,
      "transform": "scale(1, 1)",
      "width": 10,
    }
  }
>
  <line
    x1={0}
    x2="100%"
    y1={0}
    y2="100%"
  />
</svg>
`;

exports[`renders without crashing when inverted 1`] = `
<svg
  className="LinkDetail"
  style={
    Object {
      "height": 10,
      "left": 10,
      "top": 30,
      "transform": "scale(-1, -1)",
      "width": 10,
    }
  }
>
  <line
    x1={0}
    x2="100%"
    y1={0}
    y2="100%"
  />
</svg>
`;
